# senior-project-ode-solvers

./: .gitignore  CMakeLists.txt  Euler1D.h  Integrator1D.cpp  Integrator1D.h  Newton1D.cpp  ODE1D.cpp  ODE1D.h  README.md  RK4_1D.cpp  RK4_1D.h  ScalarFunction.cpp  ScalarFunction.h  Solution1D.cpp  Solution1D.h  TestQuadraticEq.cpp  dp45_vdp.csv  main.cpp  oscillator_validation.csv  plot_double_pendulum_sweep.py  plot_dp45.py  plot_oscillator.py  plot_vanderpol.py  plot_verlet.py  rk4_adaptive_vdp.csv  vdp_fixed.csv  verlet_comparison.csv
examples/: TestQuadraticEq.cpp  TestQuadraticEq.h  benchmark_example.cpp  convergence_example.cpp  double_pendulum_example.cpp  double_pendulum_sweep.cpp  dp45_example.cpp  oscillator_example.cpp  vanderpol_example.cpp  verlet_oscillator_example.cpp
include/: DormandPrince.h  DoublePendulum.h  Euler.h  Euler1D.h  ExponentialDecayODE.h  HarmonicOscillator.h  Integrator.h  Integrator1D.h  Newton1D.h  ODE.h  RK4.h  Solution.h  State.h  Stepper.h  Stepper1D.h  VanDerPol.h  VelocityVerlet.h
src/: DormandPrince.cpp  DoublePendulum.cpp  Euler.cpp  Euler1D.cpp  ExponentialDecayODE.cpp  HarmonicOscillator.cpp  Integrator.cpp  Newton1D.cpp  RK4.cpp  RK4_1D.cpp  ScalarFunction.cpp  VanDerPol.cpp  VelocityVerlet.cpp
tests/: test_dormand_prince.cpp  test_double_pendulum.cpp  test_fixed_steppers.cpp  test_velocity_verlet.cpp
